# bim-automation-initiative

./: Agents.md  README.md  REPO_STRUCTURE.md  bim_automation_project_plan.md  gitignore
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-python.yml  ci-web.yml  release-drafter.yml
docs/: Architecture.md  Integration.md  Roadmap.md  UI_UX.md
docs/ADR/: ADR-0001-initial-choices.md
scripts/: dev-setup.ps1
src/server/: README.md  pyproject.toml
src/webviewer/: README.md  index.html  package.json
src/webviewer/src/: main.tsx
src/webviewer/src/modules/: App.tsx
